# midi-util

./: changelog.md  midi-util.cabal  stack.yaml
src/Sound/MIDI/: Util.hs
