name:                 midi-util
version:              0.1
synopsis:             Common high-level tasks for processing MIDI files
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Music
build-type:           Simple
cabal-version:        >= 1.10

library
  exposed-modules:
    Sound.MIDI.Util
  build-depends:
    base           >= 4.7   && < 4.8
    , midi         >= 0.2.1 && < 0.3
    , event-list   >= 0.1.1 && < 0.2
    , non-negative >= 0.1.1 && < 0.2
    , containers   >= 0.5.5 && < 0.6
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
